--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/react-dom": "^16.9.9",
     "@webpack-cli/init": "^1.0.3",
+    "classnames": "^2.2.6",
     "md5": "^2.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
